--- a/force-app/main/default/lwc/vdt_onekeyFilters/vdt_onekeyFilters.css
+++ b/force-app/main/default/lwc/vdt_onekeyFilters/vdt_onekeyFilters.css
@@ -7,6 +7,7 @@
     font-weight: bold;
 }
 
-.input-label {
-    font-size: medium;
+.search-button {
+    margin-top: 0.75rem;
+    position: relative;
 }
