new color for target label

--- a/force-app/main/default/lwc/vdt_onekeyProgressBar/vdt_onekeyProgressBar.css
+++ b/force-app/main/default/lwc/vdt_onekeyProgressBar/vdt_onekeyProgressBar.css
@@ -16,6 +16,6 @@
     position: absolute;
     left: -25px;
     top: -250%;
-    color: #888;
+    color: rgb(7, 105, 252);
     text-align: center;
 }
