adding latest components

--- a/force-app/main/default/layouts/VDT_Object_Date_Field_Mapping__mdt-VDT Object Date Field Mapping Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Object_Date_Field_Mapping__mdt-VDT Object Date Field Mapping Layout.layout-meta.xml
@@ -16,11 +16,7 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Account_Record_Types__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Classification_Value__c</field>
+                <field>Date_API_Field__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
