--- a/force-app/main/default/layouts/VDT_Query__mdt-VDT Query Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Query__mdt-VDT Query Layout.layout-meta.xml
@@ -16,11 +16,19 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Account_Record_Types__c</field>
+                <field>Module_Name__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Classification_Value__c</field>
+                <field>Name__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Package_Version__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Query__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
