--- a/force-app/main/default/layouts/VDT_Vault_Document_Status__mdt-VDT Vault Document Status Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Vault_Document_Status__mdt-VDT Vault Document Status Layout.layout-meta.xml
@@ -16,11 +16,15 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Account_Record_Types__c</field>
+                <field>Package_Version__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Classification_Value__c</field>
+                <field>Status_Value__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Status__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
