--- a/force-app/main/default/layouts/VDT_Custom_Objects_Field_Mapping__mdt-VDT Custom Objects Field Mapping Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Custom_Objects_Field_Mapping__mdt-VDT Custom Objects Field Mapping Layout.layout-meta.xml
@@ -18,6 +18,14 @@
                 <behavior>Edit</behavior>
                 <field>Field_API_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Package_Version__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Field_Map_Key__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
