--- a/force-app/main/default/layouts/VDT_Data_Calculation__c-Product Adoption Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Data_Calculation__c-Product Adoption Layout.layout-meta.xml
@@ -27,10 +27,6 @@
                 <behavior>Edit</behavior>
                 <field>End_Month__c</field>
             </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
-                <field>Batches_Number__c</field>
-            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
@@ -48,6 +44,10 @@
             <layoutItems>
                 <behavior>Readonly</behavior>
                 <field>End_Date__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>VDT_Country__c</field>
             </layoutItems>
         </layoutColumns>
         <style>TwoColumnsTopToBottom</style>
@@ -121,6 +121,10 @@
     </relatedLists>
     <relatedLists>
         <relatedList>RelatedFileList</relatedList>
+    </relatedLists>
+    <relatedLists>
+        <fields>NAME</fields>
+        <relatedList>VDT_Transaction_Result__c.Data_Calculation__c</relatedList>
     </relatedLists>
     <showEmailCheckbox>false</showEmailCheckbox>
     <showHighlightsPanel>false</showHighlightsPanel>
