--- a/force-app/main/default/layouts/VDT_Vault_Document_Status_Map__mdt-VDT Vault Document Status Map Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Vault_Document_Status_Map__mdt-VDT Vault Document Status Map Layout.layout-meta.xml
@@ -18,6 +18,14 @@
                 <behavior>Edit</behavior>
                 <field>Document_Status__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Package_Version__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Vault_Status__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
