latest from dev

--- a/force-app/main/default/layouts/VDT_General_Setting__mdt-VDT General Setting Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_General_Setting__mdt-VDT General Setting Layout.layout-meta.xml
@@ -46,6 +46,10 @@
                 <behavior>Edit</behavior>
                 <field>Account_Classification_Field__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Product_Catalog_Object__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
