latest from dev sandbox

--- a/force-app/main/default/layouts/VDT_CRM_Document_Column__mdt-VDT CRM Document Column Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_CRM_Document_Column__mdt-VDT CRM Document Column Layout.layout-meta.xml
@@ -26,6 +26,14 @@
                 <behavior>Edit</behavior>
                 <field>Package_Version__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Display_Order__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Section__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
