--- a/force-app/main/default/layouts/VDT_Vault_Document_Column__mdt-VDT Vault Document Column Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Vault_Document_Column__mdt-VDT Vault Document Column Layout.layout-meta.xml
@@ -26,6 +26,10 @@
                 <behavior>Edit</behavior>
                 <field>Vault_API_Name__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Sections__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
