--- a/force-app/main/default/layouts/VDT_Vault_Document_Record_Type__mdt-VDT Vault Document Record Type Layout.layout-meta.xml
+++ b/force-app/main/default/layouts/VDT_Vault_Document_Record_Type__mdt-VDT Vault Document Record Type Layout.layout-meta.xml
@@ -16,15 +16,15 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Document_Status__c</field>
-            </layoutItems>
-            <layoutItems>
-                <behavior>Edit</behavior>
                 <field>Package_Version__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Vault_Status__c</field>
+                <field>Vault_Type__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>CRM_Record_Type__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
